deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: jesuromerop/demo-spring:v6
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
