svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: kube-system
spec:
  selector:
    app: demo
  ports:
  - port: 8080
    targetPort: 8080
