ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  namespace: kube-system
  labels:
    name: ingress-demo
spec:
  rules:
  - host: "demo-spring.jesusromero.tk"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo
            port: 
              number: 8080
